--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,27 @@
       <scope>provided</scope>
     </dependency>
 
-
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>eclipselink</artifactId>
       <version>2.7.0</version>
-<!--      <scope>provided</scope>&lt;!&ndash; since I'm running inside a Java EE container &ndash;&gt;-->
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.persistence</groupId>
+          <artifactId>javax.persistence</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.eclipse.persistence</groupId>
+          <artifactId>jakarta.persistence</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.eclipse.persistence</groupId>-->
+<!--      <artifactId>eclipselink</artifactId>-->
+<!--      <version>2.7.0</version>-->
+<!--&lt;!&ndash;      <scope>provided</scope>&lt;!&ndash; since I'm running inside a Java EE container &ndash;&gt;&ndash;&gt;-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
       <artifactId>javax.persistence</artifactId>
