--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,19 @@
       <version>7.0</version>
       <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>javax.servlet.jsp.jstl</groupId>
+      <artifactId>jstl-api</artifactId>
+      <version>1.2-rev-1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.glassfish.web</groupId>
+      <artifactId>jstl-impl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
 <!--//todo en son atdigim-->
     <dependency>
       <groupId>org.eclipse.persistence</groupId>
